fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -34,13 +34,14 @@ section::-webkit-scrollbar {
     display: none;
 }
 
-p {
-    line-height: 70px;
-    font-size: 80px;
+ p {
+    line-height: 76px;
+    font-size: 55px;
     margin-left: 10px;
-    height: 44px;
-    padding: 10px;
-}
+    height: 82px;
+    padding: 13px;
+    margin-top: 17px;
+ }
 
 input {
     margin-left: 1692px;
